k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  namespace: springboot
  labels:
    app: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: harbor.aikoo.net/tanzu/eureka:1.11
          ports:
            - containerPort: 8761
