k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: eureka
  name: eureka
  namespace: springboot
spec:
  ports:
    - port: 8761
      protocol: TCP
      targetPort: 8761
  selector:
    app: eureka
  type: ClusterIP
status:
  loadBalancer: {}
