k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: eureka-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eureka
spec:
  hosts:
  - "eureka.taskoo.net"
  gateways:
  - eureka-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: eureka
        port:
          number: 8761
