k8s/http.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: eureka
  namespace: springboot
spec:
  virtualhost:
    fqdn: eureka.coinsik.net
  routes:
    - services:
        - name: eureka
          port: 8761
